test/visibility/import/nested2.good
nested2.chpl:9: error: unable to import nested modules
